[package]
name = "MoonShot"
version = "9.0.0"
description = "Interactive fiction: A NASA intern in the 1960s scrambles to make Apollo 11 a success."
authors = ["Joey Parrish <joey.parrish@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"

